--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,10 @@
 {
   "crons": [
     {
+      "path": "/api/cron/daily-scan",
+      "schedule": "0 11 * * 1-5"
+    },
+    {
       "path": "/api/cron/auto-trade",
       "schedule": "35 14 * * 1"
     }
