--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
     },
     {
       "path": "/api/cron/auto-trade",
-      "schedule": "35 14 * * 1"
+      "schedule": "45 14 * * 1-5"
     }
   ]
 }
