--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.37.3",
+    "@google/generative-ai": "^0.24.1",
     "@radix-ui/react-visually-hidden": "^1.2.4",
     "axios": "^1.13.4",
     "clsx": "^2.1.1",
