Enhance UI visibility, interactive sidebar logic, and finalize v2 features

--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,10 @@
     {
       "path": "/api/cron/auto-trade",
       "schedule": "45 14 * * 1-5"
+    },
+    {
+      "path": "/api/cron/alpha-hunter-report",
+      "schedule": "35 14 * * 1-5"
     }
   ]
 }
