--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.37.3",
     "@google/generative-ai": "^0.24.1",
     "@radix-ui/react-visually-hidden": "^1.2.4",
+    "@types/jsonwebtoken": "^9.0.10",
     "axios": "^1.13.4",
     "clsx": "^2.1.1",
+    "jose": "^6.1.3",
+    "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "node-fetch": "^3.3.2",
