--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "recharts": "^3.7.0",
+    "resend": "^6.9.2",
     "tailwind-merge": "^3.4.0",
     "technicalindicators": "^3.1.0",
     "yahoo-finance2": "^3.13.0"
