--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@google/generative-ai": "^0.24.1",
     "@radix-ui/react-visually-hidden": "^1.2.4",
     "@types/jsonwebtoken": "^9.0.10",
+    "@vercel/kv": "^3.0.0",
     "axios": "^1.13.4",
     "clsx": "^2.1.1",
     "jose": "^6.1.3",
